fix(list): list should be visible when low resolution

--- a/VirtoCommerce.Storefront/App_Data/Themes/default/assets/common-components.css
+++ b/VirtoCommerce.Storefront/App_Data/Themes/default/assets/common-components.css
@@ -956,3 +956,17 @@ select {
     width: 152.2px;
     position: relative;
 }
+@media (max-width: 980px) and (min-width: 200px) {
+    .sidebar {
+        position: relative;
+        display: -webkit-inline-box;
+        text-align: center;
+        float:inherit;
+    }
+        .sidebar ul li.product-list-name {
+            margin-right: 0px;
+        }
+    .hide-if-lowWidth  {
+        display:none;
+    }
+}
